Development history / change log, please read from bottom up


Version 3.3.0 - xx yyy 2017
- update DeviceProperties schema to V31 to enable updates regarding history analysis
- update Copyrights
- fix analog display of synchronized master record
HoTTAdapter*
	- fix start time stamp using last modified of log file
	
Version 3.2.9 - 26 Jan 2017
+++++ important update Java Runtime Version prerequisite to 1.8 +++++
+++++ important update Java 32 Bit -Xmx1024m, 64 Bit -Xmx3096m  +++++
- fix early rounding while importing CSV data
- fix CSV import capability using relative time stamp
- fix table window flickering while continuous adding entries
- add Raspbian 32 ARM support 
- add history analysis as beta support (need to be enabled in preferences)
HoTTAdapter2
	- fine tune capacity filter for cases value start != 0
S32 (JLog3)
	- add support
SM GPS-Logger 1+2 
	- update configuration support firmware 1.16
	- enhance load/save setting path algorithm
SM UniLog 2 
	- minor code update configuration support FW 1.12
	- enhance load/save setting path algorithm
MC3000 SkyRC
	- switch to continuous data gathering for all slots by selecting MC3000-Set
	- remove automatic program start/stop, form now gathering rely on manual start/stop of processing
	- fix continuous record to gather pausing data
	- fix missing end of processing and create each second a new record set
Q200 SkyRC 4 channel charger 
	- support up to 4 individual batteries added by Q200
	- support for a set up to 4 batteries added by Q200-Set

Version 3.2.8 - 05 Oct 2016
- remove the restriction re-naming compressed OSD-Files
- exchange the default value of data file path to user.home instead of using root, root causes errors for most OS due to no permissions
MC3000
	- fix setting slot programs with capabilities of FW >= 1.12
	- add device XML with TYPE_CONFIG as MC3000-Set to enable single file for all 4 slots, all batteries are a set
	- fix handling with different temperature units and unit switch